Make CORS allowed origins configurable via environment variable for cloud deployment